// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoveFileDialog should match snapshot given dialog is open and api call failed 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root MuiModal-root css-1lxu39g-MuiModal-root-MuiDialog-root"
    data-testid="move-file-dialog"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-1cvd0nv-MuiDialog-container"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthXs css-1xjy3w9-MuiPaper-root-MuiDialog-paper"
        role="dialog"
        style="--Paper-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-ks0ey5-MuiTypography-root-MuiDialogTitle-root"
        >
          Move 
          <strong>
            dog.png
          </strong>
           to:
        </h2>
        <div
          class="MuiDialogContent-root MuiDialogContent-dividers css-zuz0dm-MuiDialogContent-root"
        >
          <div>
            Error
          </div>
        </div>
        <div
          class="MuiDialogActions-root MuiDialogActions-spacing css-19kok5i-MuiDialogActions-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1apkmlw-MuiButtonBase-root-MuiButton-root"
            data-testid="cancel-button"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1apkmlw-MuiButtonBase-root-MuiButton-root"
            data-testid="ok-button"
            tabindex="0"
            type="button"
          >
            Ok
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MoveFileDialog should match snapshot given dialog is open and api call is pending 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root MuiModal-root css-1lxu39g-MuiModal-root-MuiDialog-root"
    data-testid="move-file-dialog"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-1cvd0nv-MuiDialog-container"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthXs css-1xjy3w9-MuiPaper-root-MuiDialog-paper"
        role="dialog"
        style="--Paper-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-ks0ey5-MuiTypography-root-MuiDialogTitle-root"
        >
          Move 
          <strong />
           to:
        </h2>
        <div
          class="MuiDialogContent-root MuiDialogContent-dividers css-zuz0dm-MuiDialogContent-root"
        >
          <div>
            Loading...
          </div>
        </div>
        <div
          class="MuiDialogActions-root MuiDialogActions-spacing css-19kok5i-MuiDialogActions-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1apkmlw-MuiButtonBase-root-MuiButton-root"
            data-testid="cancel-button"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1apkmlw-MuiButtonBase-root-MuiButton-root"
            data-testid="ok-button"
            tabindex="0"
            type="button"
          >
            Ok
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`MoveFileDialog should match snapshot given dialog is open and api call succeeds 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root MuiModal-root css-1lxu39g-MuiModal-root-MuiDialog-root"
    data-testid="move-file-dialog"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-1cvd0nv-MuiDialog-container"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthXs css-1xjy3w9-MuiPaper-root-MuiDialog-paper"
        role="dialog"
        style="--Paper-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-ks0ey5-MuiTypography-root-MuiDialogTitle-root"
        >
          Move 
          <strong />
           to:
        </h2>
        <div
          class="MuiDialogContent-root MuiDialogContent-dividers css-zuz0dm-MuiDialogContent-root"
        >
          <ul
            aria-label="file tree navigator"
            aria-multiselectable="false"
            class="MuiSimpleTreeView-root css-rejl51-MuiSimpleTreeView-root"
            defaultcollapseicon="[object Object]"
            defaultexpandicon="[object Object]"
            id=":r0:"
            role="tree"
            style="--TreeView-itemChildrenIndentation: 12px;"
          >
            <li
              aria-expanded="false"
              class="MuiTreeItem-root css-16alkdk-MuiTreeItem-root"
              collapseicon="[object Object]"
              expandicon="[object Object]"
              id=":r0:-googledrive:"
              role="treeitem"
              tabindex="0"
            >
              <div
                class="css-53rj3a-MuiTreeItem-content MuiTreeItem-content"
              >
                <div
                  class="MuiTreeItem-iconContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                    data-testid="TreeViewExpandIconIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiTreeItem-label"
                >
                  googledrive
                </div>
              </div>
            </li>
            <li
              aria-expanded="false"
              class="MuiTreeItem-root css-16alkdk-MuiTreeItem-root"
              collapseicon="[object Object]"
              expandicon="[object Object]"
              id=":r0:-onedrive:"
              role="treeitem"
              tabindex="-1"
            >
              <div
                class="css-53rj3a-MuiTreeItem-content MuiTreeItem-content"
              >
                <div
                  class="MuiTreeItem-iconContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                    data-testid="TreeViewExpandIconIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiTreeItem-label"
                >
                  onedrive
                </div>
              </div>
            </li>
            <li
              aria-expanded="false"
              class="MuiTreeItem-root css-16alkdk-MuiTreeItem-root"
              collapseicon="[object Object]"
              expandicon="[object Object]"
              id=":r0:-icloud:"
              role="treeitem"
              tabindex="-1"
            >
              <div
                class="css-53rj3a-MuiTreeItem-content MuiTreeItem-content"
              >
                <div
                  class="MuiTreeItem-iconContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                    data-testid="TreeViewExpandIconIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiTreeItem-label"
                >
                  icloud
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="MuiDialogActions-root MuiDialogActions-spacing css-19kok5i-MuiDialogActions-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1apkmlw-MuiButtonBase-root-MuiButton-root"
            data-testid="cancel-button"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1apkmlw-MuiButtonBase-root-MuiButton-root"
            data-testid="ok-button"
            tabindex="0"
            type="button"
          >
            Ok
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
